kubernetes/infrastructure/cilium/hubble-ingress-cloudflare.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui-cloudflare
  namespace: cilium
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hubble.hl0.dev
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - hubble.hl0.dev
      secretName: hubble-hl0-tls
  rules:
    - host: hubble.hl0.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
