kubernetes/infrastructure/cilium/hubble-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: cilium
  annotations:
    tailscale.com/funnel: "false"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: hubble-ui
      port:
        number: 80
  tls:
    - hosts:
        - hubble
